@@ -1,8 +1,13 @@
 #!/usr/bin/make -f
 
-include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
+dh = --with=python-support
 
-DEB_CMAKE_CUSTOM_FLAGS += -DINSTALL_SYSTEM_CONFIG_PRINTER=TRUE
+include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
-binary-install/system-config-printer-kde::
-	dh_pysupport -p$(cdbs_curpkg)
+override_dh_auto_configure:
+	$(overriden_command) -- -DINSTALL_SYSTEM_CONFIG_PRINTER=TRUE
+
+.PHONY: override_dh_auto_test
+
+override_dh_strip:
+	$(overriden_command) --dbg-package=kdeadmin-dbg
