@@ -20,6 +20,8 @@ kdeadmin (4:4.6.1-0r1) UNRELEASED; urgency=low
   * Adapt 05_system_config_printer_kde_scroll_printer_options.diff to upstream
     changes.
   * Strip sequence numbers from debian/patches/*.
+  * Switch debian/rules engine to dhmk based qt-kde-team/2/*:
+    - require pkg-kde-tools 0.12, which has debian/man/* generation fix.
 
  -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sat, 11 Sep 2010 20:07:52 +0000
 
